--- a/app/src/main/res/layout/fragment_my_shows_listitem.xml
+++ b/app/src/main/res/layout/fragment_my_shows_listitem.xml
@@ -60,6 +60,15 @@
         android:padding="5dp"
         android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />
 
+    <ImageView
+        android:id="@+id/myshow_unwatced_count_image"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp" />
+
     <FrameLayout
         android:id="@+id/unsubscribe_menu_wrapper"
         android:layout_width="200dp"
