--- a/app/src/main/res/layout/fragment_my_shows.xml
+++ b/app/src/main/res/layout/fragment_my_shows.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
@@ -13,16 +13,17 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:scrollbars="none"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:scrollbars="none">
 
         <LinearLayout
             android:id="@+id/myShowsList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:orientation="vertical"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"/>
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp" />
 
     </com.melnykov.fab.ObservableScrollView>
 
@@ -31,25 +32,25 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/myShowsScrollView"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
+        android:layout_marginBottom="26dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:src="@drawable/ic_plus"
         fab:fab_colorNormal="@color/appAccent"
         fab:fab_colorPressed="@color/appAccentDark"
-        fab:fab_colorRipple="@color/appRed"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/myShowsScrollView"
-        android:layout_marginBottom="26dp" />
+        fab:fab_colorRipple="@color/appRed" />
 
     <ImageView
+        android:id="@+id/noShowsPrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/noShowsPrompt"
-        android:src="@drawable/startscreen"
-        android:visibility="invisible"
-        android:layout_marginTop="150dp"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/myShowsScrollView"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="150dp"
+        android:src="@drawable/startscreen"
+        android:visibility="invisible" />
 
 </RelativeLayout>
