--- a/app/src/main/res/layout/fragment_my_shows.xml
+++ b/app/src/main/res/layout/fragment_my_shows.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentTop="true"
         android:scrollbars="none">
 
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/myShowsList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/myShowsScrollView"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="110dp"
         android:src="@drawable/startscreen"
         android:visibility="invisible" />
 
